hphp/test/zend/bad/ext/gd/tests/imagechar_error1.php
<?php

$result = imagechar('string', 1, 5, 5, 'C', 1);

?>